--- a/index.css
+++ b/index.css
@@ -607,19 +607,129 @@ ul li {
   font-size: 25.32px;
 }
 
-.scroll-left,
+/* .scroll-left,
 .scroll-right {
   gap: 0px;
   opacity: 0px;
   border: none;
   scale: 0.9;
   border-radius: 50%;
+} */
+
+/* info classes */
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 4; 
 }
 
+.info {
+  display: none;
+  position: fixed;
+  z-index: 4;
+  left: 0;
+  width: 95vw;
+  height: 100vh;
+  overflow: auto;
+  justify-items: center;
+  background-color: #F3F2F2 ;
+  top: 9.17vh;
+  left: 2.52vw;
+  right:  2.52vw;
+  flex-direction: column;
+  border-radius: 20px;
+}
+
+#close-icon {
+  position: absolute;
+  top: 34px;
+  right: 38px;
+  cursor: pointer;
+}
+
+.info-items {
+  display: flex;
+  margin: 20px 75px;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.info-title {
+  font-family: 'Gotham Condensed Bold';
+  font-size: 36px;
+  line-height: 56.26px;
+  display: flex;
+}
+
+.info-details {
+  font-size: 21px;
+  line-height: 27.3px;
+  margin-top: 28px;
+  font-family: 'Gotham Narrow Book';
+}
+
+.column-header-text, .column-item-text {
+  font-family: 'Gotham Narrow Medium';
+}
+
+/* table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+col:nth-child(1) {
+  width: 444px;
+}
+
+col:nth-child(2),
+col:nth-child(3) {
+  width: 175px;
+}
+
+thead tr {
+  height: 70px; /* Set height for the header row */
+}
+
+tbody tr {
+  height: 55px; /* Set height for the body rows */
+}
+
+th:first-child {
+  border-top-left-radius: 10px;
+}
+th:last-child {
+  border-top-right-radius: 10px;
+}
+
+th, td {
+  padding: 16px;
+  font-size: 18px;
+  text-align: left;
+}
+
+th {
+  background-color: #495057;
+  height: 78px;
+  color: white;
+}
+
+tr:nth-child(even) {
+  background-color:#E9ECEF;
+}
+
+tr:nth-child(odd) {
+  /* background-color: #f9f9f9; */
+  background-color: #FFFFFF;
+  ;
+}
 
 /* Media query for screens 656px and below */
-
-
 @media (max-width: 320px) {
 
 }
