--- a/index.css
+++ b/index.css
@@ -286,7 +286,9 @@ body {
   top: 0;
   left: 0;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: start;
+  gap: 0px;
+  padding: 0 0;
   align-items: center;
   width: 100vw;
   height: 100vh;
@@ -294,11 +296,11 @@ body {
   overflow-y: hidden;
 }
 
+
 .search-page-header {
   color: #000000;
   font-family: "Gotham Condensed Bold";
-  font-weight: 700;
-  font-size: 4rem;
+  font-size: calc((72 / 656) * 96vw);
   margin: 0;
   text-align: center;
 }
@@ -320,6 +322,8 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-top: 15px;
+  flex-direction: column-reverse;
+  height: auto;
 }
 
 .input-field-container {
@@ -410,8 +414,11 @@ body {
   font-weight: 700;
   font-size: 1.25rem;
   padding: 0px 40.15px 0px 40.15px;
-  width: 340px;
-  height: 48px;
+  width: calc((546 / 656) * 96vw);
+  height: calc((87 / 656) * 96vw);
+  justify-content: center;
+  align-items: center;
+  margin-bottom: calc((30 / 656) * 96vw);
   outline: none;
   border: none;
 }
@@ -542,8 +549,10 @@ ul li {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
+} 
 
+
+/* info class */
 .info {
   display: none;
   position: fixed;
@@ -730,6 +739,13 @@ tr:nth-child(odd) {
   background-color: #FFFFFF;
   ;
 }
+
+@media screen and (max-width: 656px), screen and (max-height: 369px) {
+  body {
+    max-height: 369px
+  }
+}
+
 
 /* Media query for screens 656px and below */
 @media (max-width: 320px) {
